# LONGPORT-DualSMA-SPY-AutoTrading-System

./: .env  .env.example  .gitignore  README.md  debug_connection.py  pyproject.toml  requirements.txt  topic.md
config/: config.yaml
src/backtest/: engine.py
src/cli/: account_cmd.py  backtest_cmd.py  config_cmd.py  logs_cmd.py  main.py  notify_cmd.py  quote_cmd.py  run_cmd.py  strategy_cmd.py  trade_cmd.py
src/core/: data_fetcher.py  lp_config_template.py  notifier.py  risk_manager.py  strategy.py  trader.py
src/realtrade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: config_loader.py  logger.py
